ajuste del tamaño de carrusel
ajuste del tamaño del carrusel

--- a/framework/index.html
+++ b/framework/index.html
@@ -47,21 +47,23 @@
 
     <section>
 <!--carrusel grande-->
-<div class="container">
-    <div id="carouselslide-fade-big" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/imagenes/feria_de _sira.png" class="d-block w-100" alt="...">
-          </div>
+<div class="container-fluid">
+    <div class="container-carousel-grande">
+        <div id="carouselslide-fade-big" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/imagenes/feria_de _sira.png" class="d-block w-100" alt="...">
+            </div>
+            </div>
         </div>
-      </div>
-            
+                
+    </div>
 </div>
     </section>
 
