--- a/framework/index.html
+++ b/framework/index.html
@@ -69,8 +69,25 @@
 
     <section>
 <!--Tarjetas1-->
-<div class="container">
-            
+<div class="container-tarjetas">
+            <div class="tarjeta">
+                <img src="assets/imagenes/feria_de _sira.png" alt="feriadesira">
+                <h4>Rector 1</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+                <a href="#">Leer más</a>
+            </div>
+            <div class="tarjeta">
+                <img src="assets/imagenes/feria_de _sira.png" alt="feriadesira">
+                <h4>Rector 2</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+                <a href="#">Leer más</a>
+            </div>
+            <div class="tarjeta">
+                <img src="assets/imagenes/feria_de _sira.png" alt="feriadesira">
+                <h4>Rector 3</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+                <a href="#">Leer más</a>
+            </div>
 </div>
     </section>
 
