--- a/framework/index.html
+++ b/framework/index.html
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
+                  <a class="nav-link">Disabled</a>
                 </li>
               </ul>
         </div>
@@ -69,25 +69,8 @@
 
     <section>
 <!--Tarjetas1-->
-<div class="container-tarjetas">
-            <div class="tarjeta">
-                <img src="assets/imagenes/feria_de _sira.png" alt="feriadesira">
-                <h4>Rector 1</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
-                <a href="#">Leer más</a>
-            </div>
-            <div class="tarjeta">
-                <img src="assets/imagenes/feria_de _sira.png" alt="feriadesira">
-                <h4>Rector 2</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
-                <a href="#">Leer más</a>
-            </div>
-            <div class="tarjeta">
-                <img src="assets/imagenes/feria_de _sira.png" alt="feriadesira">
-                <h4>Rector 3</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
-                <a href="#">Leer más</a>
-            </div>
+<div class="container">
+            
 </div>
     </section>
 
