cambios del sábado 6

--- a/framework/index.html
+++ b/framework/index.html
@@ -157,41 +157,39 @@
 
    <section>
 <!--Carrusel pequeño-->
-<div class="container">
-    <div class="container-fluid-pequeño">
-        <div class="container-carousel-pequeño">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="assets/imagenes/feria_de_sira.png" class="d-block w-100" alt="...">
+<div class="container-fluid-pequeño">
+    <div class="container-carousel-pequeño">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
                 </div>
+                <div class="carousel-item">
+                <img src="assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                <img src="assets/imagenes/feria_de_sira.png" class="d-block w-100" alt="...">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
         </div>
     </div>
-      
 </div>
+
     </section>
 <footer>
-    <section>
-<!--Grande-->
         <div class="container-footer">
+            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo</p>
+            <a href="" target="_blank">Comisión de Turismo de la República de Quatu</a>
         </div>
-    </section>
+   
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
