--- a/framework/pagina_cuerpo_index.html
+++ b/framework/pagina_cuerpo_index.html
@@ -13,3 +13,94 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
+<body>
+	<header>
+        <!--Barra-->
+        <div class="container-nav">
+            <ul class="nav-prueba">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link">Disabled</a>
+                </li>
+              </ul>
+        </div>
+    </header>
+
+<section class="container-contenido">
+
+		<div class="container-imagenes">
+			<img src="../framework/assets/imagenes/acueducto.jpg" alt="acueducto">
+      <img src="../framework/assets/imagenes/alfareras.png" alt="alfareras">
+      <img src="../framework/assets/imagenes/anciana_varali.png" alt="anciana">
+      <img src="../framework/assets/imagenes/ancianos.png" alt="ancianos">
+      <img src="../framework/assets/imagenes/baobab.png" alt="baobab">
+		</div>
+
+		<div class="container-texto">
+      <h2>
+        Islas Quatu
+      </h2>
+			<p>
+        Islas Quatu, (malgache: Nosy Quatu, portugués: Ilhas Quatu), oficialmente República de Quatu, es un archipiélago ubicado en el océano Índico, al sureste de la isla Inkoralis. La nación está comprendida por un conjunto de cuatro islas mayores llamadas: Ermo, al suroeste; Ionaka al centro; Videns al noroeste y Sira al sur; también se encuentra un pequeño conjunto de islas al este, conocidas como Tampon-Dranomasina. La capital del país es Ciudad de Videns y es una de las más pobladas. Al igual que Madagascar, era parte en su origen del subcontinente indio, separándose hace 88 millones de años. Posee flora y fauna endémica del archipiélago, destacándose aves no voladoras de gran tamaño conocidas como varali y oulba, que fueron tempranamente domesticadas por los pueblos originarios del archipiélago, quienes son conocidos por usar aves como animales de tiraje. El nombre de la isla proviene del latín quattuor, que significa cuatro. El gentilicio de los habitantes de islas Quatu es quatuanos (cuatuanos). Luego del mega incendio de 1965, que duró 25 días y que dejó al país cubierto de ceniza tóxica y humo, llegando incluso a Madagascar, se decidió aplicar un nuevo enfoque en el tratamiento de la basura y los desechos. Actualmente la isla ha reducido considerablemente su acumulación de basura, ya que se aplicaron políticas públicas que fortalecen el reciclaje, controlan la obsolescencia programada y la práctica tradicional de reutilización de aparatos electrónicos, juguetes y artefactos.
+			</p>
+
+      <h2>
+        Geografía
+      </h2>
+      <p>
+        Es un archipiélago surgido junto con la separación, con Madagascar, del subcontinente indio. Se cree que en un momento fue una única isla, pero con el tiempo se fue hundiendo; eso determina que cada isla posea características tan diversas. Son cuatro islas mayores, tres habitadas (Videns, Ionaka y Sira) y una deshabitada (Eremo). También existen diecinueve islotes que componen las llamadas Tampon-Dranomasina, estando algunas habitadas. Posee dos tipos de clima: clima tropical en Videns, Ionaka y Tampon-Dranomasina y clima árido cálido en Eremo y Sira. El archipiélago posee arrecifes de coral al centro del conjunto y entre los islotes, cubriendo una extensión de 900 km2
+      </p>
+      
+      <h2>Flora</h2>
+      <p>
+Por efecto del clima, la flora es muy diversa en el archipiélago. Es predominantemente nativa y endémica, donde se destaca el baobab de Videns (Adansonia vidensii), palmera de Videns (Syagrus vidensii), orquídea de Ionaka (Diuris ionakii), orquídea rugosa (Ceratobium ionakii), orquídea múltiple (Ceratobium dranomasii).
+</p>
+<h2>Fauna</h2>
+<p>
+El archipiélago es conocido por poseer aves dos especies de gran tamaño que son el avestruz quatuana o varali (Struthio varalii) y la gallina quatuana u oulba (Acryllium oulbii). Originalmente estas habitaban en Sira, pero se han extendido por el archipiélago por la domesticación. También habitan auquénidos y camélidos endémicos, habitantes de Sira y algunos sectores de Eremo, muy resistentes al calor y a la aridez, que han sido domesticadas por los habitantes para obtener leche (práctica ya en desuso), lana y carne.
+</p>
+
+<h2>VIDENS</h2>
+<p>
+Es la isla mayor, conformada por altos cordones montañosos y sierras ubicadas en la parte central de la isla, rodeadas de bosque y selva. Su clima permite la existencia de bosques densos que contienen mucha agua y terrenos ricos para el cultivo. Posee yacimientos de hierro, aluminio, basalto y cuarzo. . El punto más alto es el monte Mesoandro, siendo el onceavo monte más alto del mundo, de 8070 kilómetros de altura, que se encuentra dentro la cordillera de Maro.
+</p>
+
+<h2>IONAKA</h2>
+<p>
+Es una isla de valles fértiles y canales de agua dulce que proviene de cuencas endorreicas y arreicas. Está atravesada por algunos canales, que son entradas de mar de baja profundidad que los habitantes transitan arriba de balsas. Se practica la agricultura, cosechándose vainilla, caña de azúcar, frutas exóticas y arroz.
+</p>
+
+<h2>SIRA</h2>
+<p>
+La isla es una meseta alta, con algunas cadenas montañosas bajas, como el cordón Sirano. Al oeste se encuentra el salar de Sira, y las lagunas de sal de Vira. Al centro de la isla se encuentra el campo dunar de Barasi, que ocupa un tercio del tamaño total de la isla. Hacia la costa este de la isla se encuentran los acantilados de Erebii, de gran riqueza biológica.En las cuencas endorreicas y salares donde habitan auquénidos, aves cactáceas y suculentas. De aquí son autóctonos los varali y los oulba.
+</p>
+
+<h2>EREMO</h2>
+<p>
+La isla es la segunda más grande del archipiélago y en un principio estuvo absolutamente deshabitada. Es arenosa y rocosa, y no se sabe por qué ningún pueblo la habitó, aunque se encontraron vestigios de que los primeros habitantes del archipiélago cruzaron la isla, muriendo en el trayecto. Posee quebradas donde se encontraron restos humanos de más de 2000 años. La cuenca más profunda es la Laguna de Arena que se encuentra en el suroeste de la isla. Con la llegada de colonos y posteriormente con la expansión de la población en el archipiélago, la isla se convirtió en el vertedero oficial, evaluándose su factibilidad al no existir animales y personas que se afectaran por el vertimiento de desechos. Los montes que abovedan llanuras permitió que en ellas se depositara basura, desde mediados de 1800.
+</p>
+
+<h2>TAMPON-DRANOMASINA</h2>
+<p>
+Son islotes altos medianamente habitados que se encuentran rodeados por arrecifes de coral. Se conocen como Tampon-Dranomasina por los lugareños, ya que son territorios de pocos kilómetros que sobresalen desde el mar a una altura relativa. Algunas poseen escalas antiguas que indican que son habitadas desde hace muchos años.
+</p>
+		</div>
+
+  </section>
+
+  <footer>
+    <div class="container-footer">
+        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo</p>
+        <a href="" target="_blank">Comisión de Turismo de la República de Quatu</a>
+    </div>
+
+</footer>
+</body>
