--- a/framework/index.html
+++ b/framework/index.html
@@ -187,8 +187,9 @@
     </section>
 <footer>
         <div class="container-footer">
-            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo</p>
-            <a href="" target="_blank">Comisión de Turismo de la República de Quatu</a>
+            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo
+                 <a href="" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
+            
         </div>
    
 </footer>
