--- a/framework/pagina_cuerpo_index.html
+++ b/framework/pagina_cuerpo_index.html
@@ -22,7 +22,7 @@
               <a class="nav-link active" aria-current="page" href="framework/pagina_cuerpo_index.html">Sobre Quatu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Lleva a Quatu contigo</a>
+              <a class="nav-link" href="framework/pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Cosas Interesantes</a>
@@ -91,6 +91,8 @@ Algunas poseen escalas antiguas que indican que son habitadas desde hace muchos 
   <footer>
     <div class="container-footer">
         <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a href="" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
-        </div>     
+        </div>
+   
+        
 </footer>
 </body>
