Co-authored-by: michelldiaz.jp <michelldiaz@users.noreply.github.com>

--- a/framework/index_framework.html
+++ b/framework/index_framework.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -16,6 +17,7 @@
 <body>
     <header>
         <!--Barra-->
+        <div class="container-nav">
             <!--
                 <nav class="site-navigation">
                 <img class="logo" src="imagen/logo_pequeño.png" alt="Favicon">
@@ -26,19 +28,19 @@
                 <a href="links-interes.html">Postula Aquí</a>
             </nav>
         -->
-        <div class="container-nav">
             <ul class="nav-prueba">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="framework/pagina_cuerpo_index.html">Sobre Quatu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="framework/pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cosas Interesantes</a>
-              </li>
-            </ul>
-          </div>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="framework/pagina_cuerpo_index.html">Sobre Quatu</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link">Disabled</a>
+                </li>
               </ul>
         </div>
     </header>
@@ -101,8 +103,8 @@
     <div class="tarjeta">
         <img src="framework/assets/imagenes/economia.png" alt="Economía">
         <h4>Economía</h4>
-        <p>Las riquezas de Quatu.</p>
-        <a href="framework/pagina_cuerpo_econom.html">Leer más</a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+        <a href="#">Leer más</a>
     </div>
     <div class="tarjeta">
         <img src="framework/assets/imagenes/turismo.png" alt="Turismo">
