modificación de link de pag de nav bar

--- a/framework/pagina_cuerpo_econom.html
+++ b/framework/pagina_cuerpo_econom.html
@@ -22,7 +22,7 @@
               <a class="nav-link active" aria-current="page" href="framework/pagina_cuerpo_index.html">Sobre Quatu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lleva a Quatu contigo</a>
+              <a class="nav-link" href="framework/pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Cosas Interesantes</a>
