eliminación de imagen de las carpetas

--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
 <!--Tarjetas1-->
 <div class="container-tarjetas">
     <div class="tarjeta">
-        <img src="framework/assets/imagenes/economia.png" alt="Economía">
+        <img src="framework/assets/imagenes/economia.png" alt="camino de baobabs">
         <h4>Economía</h4>
         <p>Las riquezas de Quatu.</p>
         <a href="framework/pagina_cuerpo_econom.html">Leer más</a>
     </div>
     <div class="tarjeta">
-        <img src="framework/assets/imagenes/turismo.png" alt="Turismo">
+        <img src="framework/assets/imagenes/turismo.png" alt="feria costumbrista">
         <h4>Turismo</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+        <p>Espacios que visitar.</p>
         <a href="#">Leer más</a>
     </div>
     <div class="tarjeta">
-        <img src="framework/assets/imagenes/historia.png" alt="Historia">
+        <img src="framework/assets/imagenes/historia.png" alt="templo ceremonial">
         <h4>Historia</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+        <p>Hace cientos de años alguien sobre un varali.</p>
         <a href="#">Leer más</a>
     </div>
 </div>
@@ -133,21 +133,21 @@
 <div class="container">
     <div class="container-tarjetas">
         <div class="tarjeta">
-            <img src="framework/assets/imagenes/economia.png" alt="Historia Reciente">
-            <h4>Economía</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+            <img src="framework/assets/imagenes/fiesta_muertos.png" alt="fiesta de los muertos">
+            <h4>Historia Reciente</h4>
+            <p>Como la cuatuanidad se inserta en el mundo globalizado.</p>
             <a href="#">Leer más</a>
         </div>
         <div class="tarjeta">
-            <img src="framework/assets/imagenes/turismo.png" alt="Cultura">
-            <h4>Turismo</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+            <img src="framework/assets/imagenes/san_Joao.png" alt="pasacalles de San Joao">
+            <h4>Cultura</h4>
+            <p>El Hacer.</p>
             <a href="#">Leer más</a>
         </div>
         <div class="tarjeta">
-            <img src="framework/assets/imagenes/historia.png" alt="Historia">
-            <h4>Historia</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iusto quisquam.</p>
+            <img src="framework/assets/imagenes/historia.png" alt="casa tradicioal de altura">
+            <h4>Arquitectura</h4>
+            <p>Casco histórico, patrimonio nacional.</p>
             <a href="#">Leer más</a>
         </div>
     </div>       
@@ -159,8 +159,7 @@
         <div class="container-footer">
             <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a href="" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
             
-        </div>
-   
+        </div>  
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
