--- a/framework/pagina_cuerpo_index.html
+++ b/framework/pagina_cuerpo_index.html
@@ -90,7 +90,7 @@ Algunas poseen escalas antiguas que indican que son habitadas desde hace muchos 
 
   <footer>
     <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a href="" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
+        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a id="corporacion" href="" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
         </div>
    
         
