--- a/framework/pagina_cuerpo_libro.html
+++ b/framework/pagina_cuerpo_libro.html
@@ -48,7 +48,7 @@
 </div>
 <footer>
     <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo | <a href="" target="_blank">  Comisión de Turismo de la República de Quatu</a></p>
+        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo | <a id="corporacion" href="" target="_blank">  Comisión de Turismo de la República de Quatu</a></p>
         </div>
    
         
