--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <footer>
         <div class="container-footer">
-            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a href="" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
+            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
             
         </div>  
 </footer>
