corrección de  links

--- a/framework/pagina_cuerpo_index.html
+++ b/framework/pagina_cuerpo_index.html
@@ -19,13 +19,13 @@
         <div class="container-nav">
           <ul class="nav-prueba">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="framework/pagina_cuerpo_index.html">Sobre Quatu</a>
+              <a class="nav-link active" aria-current="page" href="pagina_cuerpo_index.html">Sobre Quatu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="framework/pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
+              <a class="nav-link" href="pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cosas Interesantes</a>
+              <a class="nav-link" href="pagina_advertencia.html">Cosas Interesantes</a>
             </li>
           </ul>
         </div>
@@ -90,7 +90,7 @@ Algunas poseen escalas antiguas que indican que son habitadas desde hace muchos 
 
   <footer>
     <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a id="corporacion" href="" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
+        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a id="corporacion" href="pagina_advertencia.html" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
         </div>
    
         
