--- a/framework/pagina_cuerpo_econom.html
+++ b/framework/pagina_cuerpo_econom.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+    <link rel="icon" type="image/png" href="framework/assets/imagenes/favicon.png">
+  </head>
 
 <body>
 	<header>
@@ -26,6 +27,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Cosas Interesantes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
           </ul>
         </div>
