--- a/sitio-1/pagina_cuerpo_econom.html
+++ b/sitio-1/pagina_cuerpo_econom.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="framework/assets/imagenes/favicon.png">
+    <link rel="icon" type="image/png" href="sitio-1/assets/imagenes/favicon.png">
   </head>
 
 <body>
@@ -20,13 +20,13 @@
         <div class="container-nav">
           <ul class="nav-prueba">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="framework/pagina_cuerpo_index.html">Sobre Quatu</a>
+              <a class="nav-link active" aria-current="page" href="pagina_cuerpo_index.html">Sobre Quatu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="framework/pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
+              <a class="nav-link" href="pagina_cuerpo_libro.html">Lleva a Quatu contigo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cosas Interesantes</a>
+              <a class="nav-link" href="pagina_advertencia.html">Cosas Interesantes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../index.html">Inicio</a>
@@ -39,8 +39,8 @@
   
 
 		<div class="container-imagenes">
-			<img src="../framework/assets/imagenes/acueducto.jpg" alt="acueducto">
-      <img src="../framework/assets/imagenes/alfareras.png" alt="alfareras">
+			<img src="sitio-1/assets/imagenes/acueducto.jpg" alt="acueducto">
+      <img src="sitio-2/assets/imagenes/alfareras.png" alt="alfareras">
 		</div>
 
 		<div class="container-texto">
