--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Documentación del Framework</title>
+	<title>República de Quatu</title>
 	<link rel="stylesheet" href="sitio-1/assets/css/framework.css">
 	<link rel="stylesheet" href="assets/css/docs.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,18 +16,7 @@
 
 <body>
     <header>
-        <!--Barra-->
-            <!--
-                <nav class="site-navigation">
-                <img class="logo" src="imagen/logo_pequeño.png" alt="Favicon">
-                <a href="index.html">Inicio</a>
-                <a href="notas.html">Contacto</a>
-                <a href="https://wiki.ead.pucv.cl/David_Silva_Bernales">Logros/Ganadores anteriores</a>
-                <a href="sobre-mi.html">Conócenos</a>
-                <a href="links-interes.html">Postula Aquí</a>
-            </nav>
-        -->
-        <div class="container-nav">
+               <div class="container-nav">
             <ul class="nav-prueba">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="sitio-1/pagina_cuerpo_index.html">Sobre Quatu</a>
@@ -46,29 +35,8 @@
               </ul>
         </div>
     </header>
-
-
+    
     <section>
-<!--carrusel grande
-<div class="container-fluid">
-    <div class="container-carousel-grande">
-        <div id="carouselslide-fade-big" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/imagenes/feria_de _sira.png" class="d-block w-100" alt="...">
-            </div>
-            </div>
-        </div>
-      
-    </div>
-</div>
--->
 
 <div class="container-fluid">
     <div class="container-carousel-grande">
