--- a/sitio-2/tintero_paola.html
+++ b/sitio-2/tintero_paola.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tintero de Paula</title>
-	<link rel="stylesheet" href="../framework/assets/css/framework.css">
+	<link rel="stylesheet" href="sitio-2.css">
 	<link rel="stylesheet" href="css/sitio-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,13 +29,16 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="sitio-2/assets/imagenes/P1.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                        <img src="framework/assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                        <img src="framework/assets/imagenes/turismo.png" class="d-block w-100" alt="...">
+                        <img src="sitio-2/assets/imagenes/P1.png" class="d-block w-100" alt="..."
+                    </div>
+                    <div class="carousel-item">
+                        <img src="sitio-2/assets/imagenes/P2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="sitio-2/assets/imagenes/P3.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="sitio-2/assets/imagenes/P4.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
