compresion de imagenes

--- a/sitio-2/index_2.html
+++ b/sitio-2/index_2.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tintero</title>
 	<link rel="stylesheet" href="../framework/assets/css/framework.css">
-	<link rel="stylesheet" href="css/sitio-2.css">
+	<link rel="stylesheet" href="assets/css/sitio-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 <div class="container-tarjetas">
             <div class="tarjeta">
                     <h4>El Tintero de Paola Chicano</h4>
-                    <a href="sitio-1/pagina_cuerpo_econom.html">de una mirada</a>
+                    <a href="tintero_paola.html">de una mirada</a>
             </div>
             <div class="tarjeta">
                     <h4>El Tintero de David Silva</h4>
