--- a/sitio-2/tintero_paola.html
+++ b/sitio-2/tintero_paola.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tintero de Paula</title>
 	<link rel="stylesheet" href="sitio-2.css">
-	<link rel="stylesheet" href="css/sitio-2.css">
+	<link rel="stylesheet" href="assets/css/sitio-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -32,13 +32,13 @@
                         <img src="sitio-2/assets/imagenes/pe1.png" class="d-block w-100" alt="..."
                     </div>
                     <div class="carousel-item">
-                        <img src="sitio-2/assets/imagenes/P2.png" class="d-block w-100" alt="...">
+                        <img src="assets/imagenes/pe2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="sitio-2/assets/imagenes/P3.png" class="d-block w-100" alt="...">
+                        <img src="sitio-2/assets/imagenes/pe3.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="sitio-2/assets/imagenes/P4.png" class="d-block w-100" alt="...">
+                        <img src="sitio-2/assets/imagenes/pe4.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
