--- a/sitio-2/tintero_paola.html
+++ b/sitio-2/tintero_paola.html
@@ -17,49 +17,50 @@
         <div class="container-nav">
             <ul class="nav-prueba">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="sitio-2/index_2.html">El Tintero</a>
+                <a class="nav-link active" aria-current="page" href="index_2.html">El Tintero</a>
             </li>
             </ul>
         </div>
     </header>
 
-    <section>
-        <div class="container-fluid">
-            <div class="container-carousel-grande">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="sitio-2/assets/imagenes/pe1.png" class="d-block w-100" alt="..."
+        <section>
+            <div class="container-fluid">
+                <div class="container-carousel-grande">
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/imagenes/p1.png" class="d-block w-100" alt="..."
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/imagenes/p2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/imagenes/p3.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/imagenes/p4.png" class="d-block w-100" alt="...">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="assets/imagenes/pe2.png" class="d-block w-100" alt="...">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                     </div>
-                    <div class="carousel-item">
-                        <img src="sitio-2/assets/imagenes/pe3.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="sitio-2/assets/imagenes/pe4.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <footer>
-        <div class="container-footer">
-            <p>El Tintero es un espacio donde tres compañeros universitarios suben obras gráficas y fotográficas  en la exploración, trabajo freelance
-            y dibujos hechoss por amor al dibujo.</p>
-        </div>
-    </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        </section>
+
+        <footer>
+            <div class="container-footer">
+                <p>El Tintero es un espacio donde tres compañeros universitarios suben obras gráficas y fotográficas  en la exploración, trabajo freelance
+                y dibujos hechoss por amor al dibujo.</p>
+            </div>
+        </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
