--- a/sitio-2/tintero_david.html
+++ b/sitio-2/tintero_david.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tintero de Paula</title>
+	<title>Tintero de David</title>
 	<link rel="stylesheet" href="sitio-2.css">
 	<link rel="stylesheet" href="assets/css/sitio-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,19 +27,19 @@
             <div class="container-fluid">
                 <div class="container-carousel-grande">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="assets/imagenes/p1.png" class="d-block w-100" alt="..."
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assets/imagenes/p2.png" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assets/imagenes/p3.png" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assets/imagenes/p4.png" class="d-block w-100" alt="...">
-                                </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/imagenes/d1.png" class="d-block w-100" alt="..."
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/imagenes/d2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/imagenes/d3.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/imagenes/d4.png" class="d-block w-100" alt="...">
+                        </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
