--- a/sitio-2/index_2.html
+++ b/sitio-2/index_2.html
@@ -30,7 +30,7 @@
             </div>
             <div class="tarjeta">
                     <h4>El Tintero de David Silva</h4>
-                    <a href="sitio-1/pagina_advertencia.html">de una mirada</a>
+                    <a href="tintero_david.html">de una mirada</a>
             </div>
             <div class="tarjeta">
                     <h4>El Tintero de Michell Díaz</h4>
