--- a/sitio-2/tintero_michel.html
+++ b/sitio-2/tintero_michel.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tintero de David</title>
+	<title>Tintero de Michell</title>
 	<link rel="stylesheet" href="sitio-2.css">
 	<link rel="stylesheet" href="assets/css/sitio-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,19 +27,19 @@
             <div class="container-fluid">
                 <div class="container-carousel-grande">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/imagenes/d1.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/imagenes/d2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/imagenes/d3.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/imagenes/d4.png" class="d-block w-100" alt="...">
-                        </div>
+                        <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="assets/imagenes/m1.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/imagenes/m2.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/imagenes/m3.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/imagenes/m4.png" class="d-block w-100" alt="...">
+                                </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -57,7 +57,7 @@
         <footer>
             <div class="container-footer">
                 <p>El Tintero es un espacio donde tres compañeros universitarios suben obras gráficas y fotográficas  en la exploración, trabajo freelance, <a id="corporacion" href="../index.html" target="_blank">
-                y dibujos hechos por amor al dibujo.</a> </p>
+                    y dibujos hechos por amor al dibujo.</a> </p>
             </div>
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
