--- a/sitio-2/tintero_paola.html
+++ b/sitio-2/tintero_paola.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tintero de Paula</title>
+	<title>Tintero de Paola</title>
 	<link rel="stylesheet" href="sitio-2.css">
 	<link rel="stylesheet" href="assets/css/sitio-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets/imagenes/p1.png" class="d-block w-100" alt="..."
+                                    <img src="assets/imagenes/p1.png" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="assets/imagenes/p2.png" class="d-block w-100" alt="...">
@@ -56,8 +56,8 @@
 
         <footer>
             <div class="container-footer">
-                <p>El Tintero es un espacio donde tres compañeros universitarios suben obras gráficas y fotográficas  en la exploración, trabajo freelance
-                y dibujos hechos por amor al dibujo.</p>
+                <p>El Tintero es un espacio donde tres compañeros universitarios suben obras gráficas y fotográficas  en la exploración, trabajo freelance, <a id="corporacion" href="../index.html" target="_blank">
+                    y dibujos hechos por amor al dibujo.</a> </p>
             </div>
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
